<resources>
    <string name="app_name">OCS</string>
    <string name="app_desc">Oncology Center Services</string>
    <string name="slider1_title">Welcome to our Oncology Center</string>
    <string name="slider1_description">professional doctors,\nmodern methods for examination\n,Fixed and organized appointments</string>
    <string name="slider2_title">Medical Rays</string>
    <string name="slider2_description">computerized tomography(CT)\nscan, bone scan,\nmagnetic resonance imaging (MRI),\npositron emission tomography(PET) scan,\nultrasound and X-ray,</string>
    <string name="slider3_title">Medical Tests</string>
    <string name="slider3_description">complete blood count (CBC).\nTumor markers.\nBlood protein testing.\nCirculating tumor cell tests</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started!</string>
    <string name="login">Login</string>
    <string name="p_login">Patient Login</string>
    <string name="d_login">Doctor Login</string>
    <string name="a_login">Admin Login</string>
    <string name="p_email_hint">Email</string>
    <string name="d_email_hint">walid2mohamed@ocs.com</string>
    <string name="a_email_hint">Enter your Secret Code</string>
    <string name="prompt_password">Password</string>
    <string name="action_login_in_short">Login</string>
    <string name="forgetPass"><u>Forgotten Password?</u></string>
    <string name="newUser">Don\'t have an account?</string>
    <string name="emptyEmail">Please enter Email</string>
    <string name="emptyPassword">Please enter Password</string>
    <string name="emptyAllData">Please enter All Data</string>
    <string name="userNotFound">User Not Found</string>
    <string name="login_failed">Login failed, Check your data and try again</string>
    <string name="login_success">Logged in Successfully</string>
    <string name="forgetPassword">Forget Password ? </string>
    <string name="forgetMessage">Enter Your Phone Number Associated With Your Account.</string>
    <string name="send">Send</string>
    <string name="verification">Verification</string>
    <string name="otpMessage">Enter The OTP code Sent on </string>
    <string name="resetPassword">Reset Your Password</string>
    <string name="newPassword">New Password</string>
    <string name="resetPasswordMessage">Your Identity has been verified!\n Set Your New Password.</string>
    <string name="update">Update</string>
    <string name="codeWrong">Code is incorrect</string>
    <string name="resend">Resend OTP in 30 Second</string>
    <string name="codeSent">Code Sent Successfully.</string>
    <string name="verifyFailed">OTP Verification Failed</string>
    <string name="wrongOTP">Enter the Full OTP Code</string>
    <string name="sucessVerification">Successfully Verified.</string>
    <string name="updateSuccess">Password Updated Successfully.</string>
    <string name="updateFailed">Password Update Failed.</string>
    <string name="menu_doctor">Doctor</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_patient">Patient</string>
    <string name="register">\ Register</string>
    <string name="first_name">First Name</string>
    <string name="last_Name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="Continue">Continue</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthdate">Birth Date</string>
    <string name="address">Address</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="oldUser">Already have an account?\ </string>
    <string name="cont_register">Continue Register</string>
    <string name="phoneFound">This phone already registered before</string>
    <string name="emailFound">This email already registered before</string>
    <string name="internetError">connection error</string>
    <string name="ageError">Your age must be > 15 year</string>
    <string name="requird">Required</string>
    <string name="specialization">specialization</string>
    <string name="add">Add</string>
    <string name="gender">Gender</string>
    <string name="notValidEmail">Enter a valid Email</string>
    <string name="emptyFName">Enter First Name</string>
    <string name="emptyLName">Enter Last Name</string>
    <string name="emptyPhone">Enter Phone</string>
    <string name="notValidNumber">Enter Valid phone (11 Number)</string>
    <string name="register_success">Registered Successfully</string>
    <string name="passwordNotMatch">Password don\'t match</string>
    <string name="notValidPassword"> password must be >8 characters</string>
    <string name="emptyBirthDate">Enter Birth Date</string>
    <string name="emptyAddress">Enter your Address</string>
    <string name="clinic_service">Oncology Clinics</string>
    <string name="logout">Logged Out Successfully</string>
    <string name="book_appointment_title">Booking Appointment</string>
    <string name="fullName_inp">Full Name</string>
    <string name="phone_inp">Phone</string>
    <string name="service_view">choose service:</string>
    <string name="medical_tests_radiobn">Medical Tests</string>
    <string name="medical_Rays_radiobn">Medical Rays</string>
    <string name="medical_clinics_radiobn">Medical clinics</string>
    <string name="send_req_btn">Send Request</string>
    <string name="successRequest">Your Request has been Submitted Successfully</string>
    <string name="failRequest">Failed, Try again Later..</string>
    <string name="doctor_details_title">Doctor Details</string>
    <string name="doctorDetailsID">Doctor ID:</string>
    <string name="doctor_ID">125</string>
    <string name="doctordetails_name">Name:</string>
    <string name="doctor_name">DR. Mohammed Alaa</string>
    <string name="doctordetais_email">Email:</string>
    <string name="doctor_email">Mohamed2alaa@ocs.com</string>
    <string name="doctordetails_phone">Phone:</string>
    <string name="doctor_phone">01209632578</string>
    <string name="doctordetails_Specialization">Specialization:</string>
    <string name="doctor_Specialization">Radiation oncology</string>
    <string name="doctordetails_birthdate">Birth Date:</string>
    <string name="doctor_birthdate">20-08-1966</string>
    <string name="Approved_title">Approved</string>
    <string name="request_button">request</string>
    <string name="approved_button">Approved</string>
    <string name="name_approved">Mazen Ali</string>
    <string name="phone_approved">01554181290</string>
    <string name="service_approved">Medical Tests</string>
    <string name="date_approved">22-03-2023</string>
    <string name="time_approved">9:00 PM</string>
    <string name="doctor_title">Doctor</string>
    <string name="doctors_view_name">DR / Mohammed Alaa</string>
    <string name="requests_title">requests</string>
    <string name="requests_name">Mazen Ali</string>
    <string name="requests_phone">01554181290</string>
    <string name="requests_service">Medical Tests</string>
    <string name="appointments_title">Appointments</string>
    <string name="appointments_name">Nada Ahmed</string>
    <string name="appointments_date">22-Dec-2022 </string>
    <string name="appointments_time"> 1:00 PM</string>
    <string name="PatientRecord_title"> Patient Record</string>
    <string name="Patientdetails_name"> Name:</string>
    <string name="Patient_name"> Mohammed Alaa</string>
    <string name="Patientdetails_email"> Email:</string>
    <string name="Patient_email"> Mohammed555@yahoo.com</string>
    <string name="Patientdetails_phone">Phone:</string>
    <string name="Patient_phone"> 01209632578</string>
    <string name="Patientdetails_diagnosis"> Diagnosis:</string>
    <string name="Patient_diagnosis">Blood Cancer</string>
    <string name="Patientdetails_medicine"> Medicine:</string>
    <string name="Patient_medicine"> Alectinib 150 mg</string>
    <string name="Drug_Effectiveness_title"> Drug Effectiveness</string>
    <string name="Drug_Effectiveness_Gene_expression">Upload Gene Expression File</string>
    <string name="hint_Drug_Effectiveness">upload file</string>
    <string name="hint_Drug_name">choose</string>
    <string name="Drug_Effectiveness_Genomic_mutation">Upload Genomic Mutation File</string>
    <string name="Drug_Effectiveness_DNA_methylation">Upload  Methylation File</string>
    <string name="Drug_Effectiveness_drug_name">drug name:</string>
    <string name="Drug_Effectiveness_predict_pn">predict</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="searchHint">Enter Name Here</string>
    <string name="noDoctorFound">No Data Found</string>
    <string name="cancel">Cancel</string>
    <string name="emptySpecialization">Enter Specialization</string>
    <string name="doctorAgeError">Age must be > 26 year</string>
    <string name="searchpatientHint">Enter patient Name Here</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="patient_name">Name</string>
    <string name="service">Service</string>
    <string name="date">Date</string>
    <string name="Time">Time</string>
    <string name="send_SMs">Send SMS</string>
    <string name="medicalRaysCT">CT</string>
    <string name="medicalRaysMRI"> MRI</string>
    <string name="medicalRaysUS">Ultrasound </string>
    <string name="medicalRaysxray">X-rays</string>
    <string name="medicalRaysCTP">440 LE</string>
    <string name="medicalRaysMRIP">950 LE</string>
    <string name="medicalRaysUSP">850 LE </string>
    <string name="medicalRaysxrayP">300 LE</string>
    <string name="medicalTestCBC">Complete blood count </string>
    <string name="medicalTestLB">Liquid Biopsy</string>
    <string name="medicalTestIm">Immunophenotyping</string>
    <string name="medicalTestBC">Blood chemistry test</string>
    <string name="medicalTestCBCP">1500 LE</string>
    <string name="medicalTestLBP">2000 LE</string>
    <string name="medicalTestImP">1000 LE </string>
    <string name="medicalTestBCP">4500 LE</string>
    <string name="medicalClinicEA">DR/ Eman Ahmed</string>
    <string name="medicalClinicWM">DR/ Walid Mohamed</string>
    <string name="medicalClinicHM">DR/ Hamza Mahmoud</string>
    <string name="medicalClinicMA">DR/ Mohamed Ali</string>
    <string name="medicalClinicEAT">From 10 AM to 1 PM</string>
    <string name="medicalClinicWMT">From 1 PM to 5 PM</string>
    <string name="medicalClinicHMT">From 5 PM to 8 PM </string>
    <string name="medicalClinicMAT">From 8 PM to 10 PM</string>
    <string name="requestsBtn">Requests</string>
    <string name="approvedBtn">Approved</string>
    <string name="appointmentsNotFound">No Appointments Found</string>
    <string name="confirmAppointment">Appointment Confirmation</string>
    <string name="timeError">Time accepted only start From 12 PM</string>
    <string name="messageConfirm">Message sent Successfully!</string>
    <string name="patients">Patients</string>
    <string name="appointments">Appointment</string>
    <string name="model">Model</string>
    <string name="log_d">Log Out</string>
    <string name="add_patient">Add Patient</string>
    <string name="upload_files">Upload Files</string>
    <string name="predict">Predict</string>
    <string name="save">Save</string>
    <string name="choosePatient">Choose Patient Name</string>
    <string name="uploaded">Uploaded Successfully!</string>
    <string name="predicting">Predicting..</string>
    <string name="predictedIC50">IC50</string>
    <string name="drugName">Drug Name</string>
    <string name="classification">Classification</string>
    <string name="saveRecord">Save to Patient Record</string>
    <string name="TryDrug">Try another Drug..</string>
    <string name="savercordSuccess">Data is saved Successfully!</string>
    <string name="savercordFailed">Data isn\'t saved </string>
    <string name="patientdetails_id">Patient ID</string>
</resources>