<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contextClickable="true"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Intro.patient.booking.BookAppointment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:orientation="vertical"
   >
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3">

        </Space>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:fontFamily="@font/acme_regular"
            android:gravity="center"
            android:text="@string/book_appointment_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/blue_500"
           >

        </TextView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3">

        </Space>
        <EditText
            android:id="@+id/fullName_edt"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_user_24"
            android:ems="10"
            android:hint="@string/fullName_inp"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            />
    <Space
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".3">

</Space>
        <EditText
            android:id="@+id/phone_edt"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_phone_24"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/black"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"

            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3">

        </Space>

        <com.anurag.multiselectionspinner.MultiSpinner
            android:layout_width="match_parent"
            android:id="@+id/service_spinner"
            android:layout_height="wrap_content"
            >

        </com.anurag.multiselectionspinner.MultiSpinner>
        <TextView
            android:id="@+id/textView37"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:fontFamily="@font/inter_font"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/service_view" />

        <CheckBox
            android:id="@+id/medical_clinics"
            android:layout_width="match_parent"
            android:layout_height="11dp"
            android:layout_weight="1"
            android:text="@string/medical_clinics_radiobn"
            android:textColor="@color/black"
            android:textStyle="bold">

        </CheckBox>

        <CheckBox
            android:id="@+id/medical_Rays"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:text="@string/medical_Rays_radiobn"
            android:textColor="@color/black"
            android:textStyle="bold">

        </CheckBox>

        <CheckBox
            android:id="@+id/medical_tests"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_weight="1"
            android:text="@string/medical_tests_radiobn"
            android:textColor="@color/black"
            android:textStyle="bold">

        </CheckBox>


        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight=".5"
            android:background="@drawable/button_style"
            android:enabled="true"
            android:fontFamily="@font/inter_font"
            android:text="@string/send_req_btn"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>