<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Intro.Login.ForgetPassword">
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    </Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/forgetPassword"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:layout_weight=".5">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/forgetMessage"
        android:gravity="center"
        android:layout_weight=".5">
    </TextView>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          android:layout_gravity="center"
            android:layout_margin="10dp"
            >

            <EditText
                android:id="@+id/phone"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:drawableStart="@drawable/baseline_phone_24"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".5"
        android:background="@drawable/button_style"
        android:enabled="true"
        android:fontFamily="@font/inter_font"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
    </Space>
</LinearLayout>