<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:fadingEdgeLength="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView38"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="TextView"
                android:textSize="20sp"
                android:textStyle="bold"

                tools:text="@string/name_approved" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5">

            </Space>

            <TextView
                android:id="@+id/textView14"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"

                android:text="TextView"
                android:textSize="20sp"

                tools:text="@string/phone_approved" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5">

            </Space>

            <TextView
                android:id="@+id/textView17"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="TextView"
                android:textSize="20sp"
                tools:text="@string/service_approved" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5">

            </Space>

            <TextView
                android:id="@+id/textView18"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="TextView"
                android:textSize="20sp"
                tools:text="@string/date_approved" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5">

            </Space>

            <TextView
                android:id="@+id/textView30"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="TextView"
                android:textSize="20sp"
                tools:text="@string/time_approved" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

