<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Register.forgetPassword.ResetPassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_height="match_parent">
<Space
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".2">
</Space>
    <TextView
        android:id="@+id/reset_pass_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetPassword"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center">
    </TextView>
        <TextView
            android:id="@+id/reset_description_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetPasswordMessage"
            android:layout_marginBottom="10dp"
            android:gravity="center">
        </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <EditText
            android:id="@+id/password"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_lock_24"
            android:ems="10"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <EditText
            android:id="@+id/passwordConfirmation"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_lock_24"
            android:ems="10"
            android:hint="@string/passwordConfirm"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_style"
            android:enabled="true"
            android:fontFamily="@font/inter_font"
            android:text="@string/update"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2">
        </Space>
</LinearLayout>
</LinearLayout>